format all the things